kubernetes/apps/media/sabnzbd/ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: sabnzbd
  namespace: media
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`sabnzbd.pxldi.de`)
      kind: Rule
      middlewares:
        - name: internal-only
          namespace: traefik
        - name: authentik-forward-auth
          namespace: traefik
      services:
        - name: sabnzbd
          port: 10097
